# free-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: wake.yml
config/: settings.yaml
docs/: EXPLAINER.md  INTERFACES.md  OPTIONAL_TOOLS.md  PRD.md  PRD_ADDENDUM_daily_wake.md  SETUP_GUIDE.md
logs/private/: 2026-06-28.md  2026-06-29.md
logs/public/: 2026-06-28.md  2026-06-29.md
site/: community.html  hatch.html  index.html
src/: __main__.py  email_inbox.py  executor.py  health.py  inbox.py  logger.py  memory.py  openrouter_client.py  planner.py  revenue.py  style_guard.py  wake.py  web_search.py
src/tasks/: decide_next.py  reflect_and_name.py  respond_to_telegram.py
state/: identity.json  last_wake.json  quota.json  telegram.json
