[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-001"
version = "0.1.0"
description = "Autonomous self-funding agent. Wakes on a schedule, runs one task, logs the outcome."
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "pydantic>=2",
    "pyyaml",
    "python-dotenv",
]

[tool.setuptools.packages.find]
include = ["src*"]
